Adicionando itens ao Cardápio

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                         <img src="./img/self-service.png" alt="" class="img-cardapio">
                         <a class="js-tab-self-service prato-feito">Prato Feito</a>
                    </li>
-                   <!-- <li class="lista-cardapio">
+                   <li class="lista-cardapio">
                         <img src="./img/self-service.png" alt="" class="img-cardapio">
-                        <a class="js-tab-self-service">Extra</a>
-                   </li> -->
+                        <a class="js-tab-self-service">Sobremesas</a>
+                   </li>
                 </ul>
             </div>
 
@@ -238,6 +238,71 @@
                         <div class="descricao">
                             <h3 class="desc-produto">Prato Feito</h3>
                             <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Prato Feito</h3>
+                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="pedido">
+                            <a href="" class="btn-pedido">Faça seu Pedido</a>
+                        </div>
+                    </section>
+                </div>
+
+                <div class="self-service js-cardapio" >
+
+                    <section>
+                        <h2>Sobremesas</h2>
+                        <div class="descricao">
+                            <h3 class="desc-produto">Sorvete</h3>
+                            <p class="desc-quantidade">Pote 1L -> <span class="desc-preco">R$ 12,00</span></p>
+                        </div>
+
+                        <div class="descricao">
+                            <h3 class="desc-produto">Picole</h3>
+                            <p class="desc-quantidade">Itabaia -> <span class="desc-preco">R$ 2,50</span></p>
                         </div>
 
                         <div class="descricao">
