--- a/index.html
+++ b/index.html
@@ -306,48 +306,8 @@
                         </div>
 
                         <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne -> <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
-                        </div>
-
-                        <div class="descricao">
-                            <h3 class="desc-produto">Prato Feito</h3>
-                            <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                            <h3 class="desc-produto">Pudim de Leite</h3>
+                            <p class="desc-quantidade">Pedaço -> <span class="desc-preco">R$ 4,00</span></p>
                         </div>
 
                         <div class="pedido">
